Completely reworked operation-system